prevent the overflow of image element

--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,11 @@ body[data-theme="dark"] {
   color: var(--gray-50);
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 ul,
 li {
   list-style: none;
